src/objects/Timesheet__c.object
<CustomObject>
    <fields>
        <fullName>Approved_Units__c</fullName>
        <description>Summation of approved units.</description>
        <label>Approved Units</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Report_Opportunity__c</fullName>
        <description>Parent Case Report</description>
        <label>Case Report/Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Timesheets</relationshipLabel>
        <relationshipName>Timesheets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <description>Date when case report was final approved date</description>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <description>Will be either ‘MCM-Onsite’ or &apos;Travel/Wait&apos;</description>
        <label>Line Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nurse_Name__c</fullName>
        <description>Name of nurse that has worked in the case.</description>
        <label>Nurse Name</label>
        <length>41</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QBDuration__c</fullName>
        <label>QBDuration</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Error__c</fullName>
        <description>Will contain Error if sync unsuccessful.</description>
        <label>QB Error</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Id__c</fullName>
        <description>Will contain TimeTracking ID if sync successful</description>
        <externalId>true</externalId>
        <label>QB Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Report_Submission_Date__c</fullName>
        <formula>Case_Report_Opportunity__r.Report_Submission_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Timesheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Timesheet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Timesheet-{00000}</displayFormat>
        <label>Timesheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>